--- a/ILIve/app/src/main/res/layout/fragment_user_info_forupdate.xml
+++ b/ILIve/app/src/main/res/layout/fragment_user_info_forupdate.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
     <ImageView
+        android:id="@+id/iv_name"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:paddingStart="7.5dp"
