--- a/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
+++ b/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
@@ -1,212 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_80">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="2dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardCornerRadius="7dp">
+    <ImageView
+        android:id="@+id/iv_round_background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="2dp"
+        android:background="@drawable/shape_round_rect_white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <RelativeLayout
+    <!--  上半部分  -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_info_root"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintTop_toTopOf="@id/iv_round_background"
+        app:layout_constraintStart_toStartOf="@id/iv_round_background"
+        app:layout_constraintEnd_toEndOf="@id/iv_round_background">
+
+        <ImageView
+            android:id="@+id/iv_bg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageView
+            android:id="@+id/iv_blur"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/blur_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent">
+            android:background="@color/white"
+            app:cardCornerRadius="7dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!--  上半部分  -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/top_info_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="1dp"/>
 
-                <ImageView
-                    android:id="@+id/iv_bg"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:scaleType="center"
-                    android:layout_margin="1dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/iv_blur"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/blur_background"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_nick_name"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:textColor="@color/text_user_info_qr_code"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardview_avatar"
+            app:textFont="Regular" />
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardview_avatar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    app:cardCornerRadius="7dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:textColor="@color/black_40"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@id/tv_nick_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_nick_name"
+            app:textFont="Normal" />
 
-                    <ImageView
-                        android:id="@+id/iv_avatar"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_margin="1dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </androidx.cardview.widget.CardView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottom_real_name_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="2dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/top_info_root"
+        app:layout_constraintStart_toStartOf="@id/top_info_root"
+        app:layout_constraintEnd_toEndOf="@id/top_info_root"
+        app:layout_constraintBottom_toBottomOf="@id/iv_round_background">
 
-                <com.hhsj.ilive.widget.CustomFontTextView
-                    android:id="@+id/tv_nick_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="27dp"
-                    android:textColor="@color/text_user_info_qr_code"
-                    android:textSize="20sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cardview_avatar"
-                    app:textFont="Regular" />
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@mipmap/icon_shield"/>
 
-                <com.hhsj.ilive.widget.CustomFontTextView
-                    android:id="@+id/tv_phone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:textColor="@color/black_40"
-                    android:textSize="12sp"
-                    app:layout_constraintStart_toStartOf="@id/tv_nick_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nick_name"
-                    app:textFont="Normal" />
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_real_name_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:gravity="center"
+            android:textSize="14sp"
+            app:textFont="Normal"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black_40"
+            android:text="@string/qr_code_card_real_name_authentication_tips"/>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_real_name_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/iv_logo"
+            app:layout_constraintEnd_toEndOf="@id/iv_logo"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            android:src="@mipmap/icon_real_name_tips"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/bottom_real_name_root"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible"
-                android:layout_below="@id/top_info_root">
+        <com.hhsj.ilive.widget.CustomEnableTextView
+            android:id="@+id/tv_start_authentication"
+            android:layout_width="230dp"
+            android:layout_height="36dp"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            app:textFont="Regular"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_real_name_tips"
+            android:text="@string/real_name_authentication_start"/>
 
-                <ImageView
-                    android:id="@+id/iv_logo"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:src="@mipmap/icon_shield"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_real_name_bottom_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            app:textFont="Light"
+            android:text="@string/qr_code_card_real_name_tips"
+            android:textColor="@color/register_login_edit_hint"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_start_authentication"/>
 
-                <com.hhsj.ilive.widget.CustomFontTextView
-                    android:id="@+id/tv_real_name_tips"
-                    android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    app:textFont="Normal"
-                    android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@id/iv_logo"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textColor="@color/black_40"
-                    android:text="@string/qr_code_card_real_name_authentication_tips"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <ImageView
-                    android:id="@+id/iv_real_name_tips"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/iv_logo"
-                    app:layout_constraintEnd_toEndOf="@id/iv_logo"
-                    app:layout_constraintTop_toBottomOf="@id/iv_logo"
-                    android:src="@mipmap/icon_real_name_tips"/>
+    <!--  下半部分  -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottom_qr_code_root"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintTop_toBottomOf="@id/top_info_root"
+        app:layout_constraintStart_toStartOf="@id/top_info_root"
+        app:layout_constraintEnd_toEndOf="@id/top_info_root">
 
-                <com.hhsj.ilive.widget.CustomEnableTextView
-                    android:id="@+id/tv_start_authentication"
-                    android:layout_width="230dp"
-                    android:layout_height="36dp"
-                    android:gravity="center"
-                    android:textSize="14sp"
-                    android:textColor="@color/white"
-                    app:textFont="Regular"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_real_name_tips"
-                    android:text="@string/real_name_authentication_start"/>
+        <ImageView
+            android:id="@+id/iv_qr_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:transitionName="ImageQrCode"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-                <com.hhsj.ilive.widget.CustomFontTextView
-                    android:id="@+id/tv_real_name_bottom_tips"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="11sp"
-                    app:textFont="Light"
-                    android:text="@string/qr_code_card_qr_code_tips"
-                    android:textColor="@color/register_login_edit_hint"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_start_authentication"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/qr_code_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            app:textFont="Light"
+            android:text="@string/qr_code_card_qr_code_tips"
+            android:textColor="@color/register_login_edit_hint"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_qr_code"/>
 
-                <ImageView
-                    android:id="@+id/iv_real_name_refresh"
-                    android:layout_width="25dp"
-                    android:layout_height="21dp"
-                    android:src="@mipmap/icon_refresh"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_refresh"
+        android:layout_width="25dp"
+        android:layout_height="21dp"
+        android:elevation="2dp"
+        android:src="@mipmap/icon_refresh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <!--  下半部分  -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/bottom_qr_code_root"
-                android:layout_below="@id/top_info_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <View
-                    android:id="@+id/view_bg"
-                    android:background="@color/white"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <ImageView
-                    android:id="@+id/iv_qr_code"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:transitionName="ImageQrCode"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <com.hhsj.ilive.widget.CustomFontTextView
-                    android:id="@+id/qr_code_tips"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="11sp"
-                    app:textFont="Light"
-                    android:text="@string/qr_code_card_qr_code_tips"
-                    android:textColor="@color/register_login_edit_hint"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/iv_qr_code"/>
-
-                <ImageView
-                    android:id="@+id/iv_refresh"
-                    android:layout_width="25dp"
-                    android:layout_height="21dp"
-                    android:src="@mipmap/icon_refresh"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
