--- a/ILIve/app/src/main/res/layout/fragment_confirm.xml
+++ b/ILIve/app/src/main/res/layout/fragment_confirm.xml
@@ -41,68 +41,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_logo" />
 
-    <LinearLayout
-        android:id="@+id/bottom_ll"
+    <include
+        layout="@layout/include_bottom_round_dialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:background="@drawable/shape_dialog_fragment_background"
+        android:layout_height="227dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical">
-
-        <com.hhsj.ilive.widget.CustomFontTextView
-            android:id="@+id/tv_tips"
-            android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/view_divider"
-            app:textFont="Regular"
-            android:textColor="@color/round_rect_button_enable"
-            android:textSize="17sp" />
-
-        <View
-            android:id="@+id/view_divider"
-            android:layout_width="match_parent"
-            android:layout_height="0.4dp"
-            android:background="@color/white_40"
-            app:layout_constraintTop_toBottomOf="@id/tv_logout"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <com.hhsj.ilive.widget.CustomFontTextView
-            android:id="@+id/tv_confirm"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:gravity="center"
-            app:textFont="Regular"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottom_view"
-            android:text="@string/update_user_info_phone_confirm"
-            android:textColor="@color/round_rect_button_enable"
-            android:textSize="17sp" />
-
-        <View
-            android:id="@+id/bottom_view"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
-            android:background="@color/white_80"/>
-
-        <com.hhsj.ilive.widget.CustomFontTextView
-            android:id="@+id/tv_cancel"
-            android:layout_width="match_parent"
-            android:layout_height="86dp"
-            android:gravity="center"
-            android:text="@string/user_info_logout_dialog_cancel"
-            app:textFont="Normal"
-            android:textColor="@color/black_100"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="17sp" />
-
-    </LinearLayout>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
