--- a/ILIve/app/src/main/res/layout/fragment_real_name_card.xml
+++ b/ILIve/app/src/main/res/layout/fragment_real_name_card.xml
@@ -1,144 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-android:id="@+id/root_view"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/white_80">
-
-<androidx.cardview.widget.CardView
-    android:id="@+id/card_view_root"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    app:cardPreventCornerOverlap="true"
-    app:cardCornerRadius="7dp">
+    android:layout_height="match_parent"
+    android:background="@color/white_80">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/iv_round_background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:elevation="2dp"
+        android:background="@drawable/shape_round_rect_white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!--  上半部分  -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/top_info_root"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@android:color/transparent">
+        android:elevation="2dp"
+        app:layout_constraintTop_toTopOf="@id/iv_round_background"
+        app:layout_constraintStart_toStartOf="@id/iv_round_background"
+        app:layout_constraintEnd_toEndOf="@id/iv_round_background">
 
-        <!--  上半部分  -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/top_info_root"
+        <ImageView
+            android:id="@+id/iv_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:background="@mipmap/background_real_name_card"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <ImageView
-                android:id="@+id/iv_bg"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@mipmap/background_real_name_card"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+        <ImageView
+            android:id="@+id/iv_flower"
+            android:layout_width="209dp"
+            android:layout_height="115dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@mipmap/background_real_name_card_flower"/>
 
-            <ImageView
-                android:id="@+id/iv_flower"
-                android:layout_width="209dp"
-                android:layout_height="115dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@mipmap/background_real_name_card_flower"/>
+        <ImageView
+            android:id="@+id/iv_idcard"
+            android:layout_width="97dp"
+            android:layout_height="87dp"
+            app:layout_constraintStart_toStartOf="@id/iv_flower"
+            app:layout_constraintEnd_toEndOf="@id/iv_flower"
+            app:layout_constraintTop_toTopOf="@id/iv_flower"
+            app:layout_constraintBottom_toBottomOf="@id/iv_flower"
+            android:background="@mipmap/icon_real_name_card_id_card"/>
 
-            <ImageView
-                android:id="@+id/iv_idcard"
-                android:layout_width="97dp"
-                android:layout_height="87dp"
-                app:layout_constraintStart_toStartOf="@id/iv_flower"
-                app:layout_constraintEnd_toEndOf="@id/iv_flower"
-                app:layout_constraintTop_toTopOf="@id/iv_flower"
-                app:layout_constraintBottom_toBottomOf="@id/iv_flower"
-                android:background="@mipmap/icon_real_name_card_id_card"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_real_name_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="17dp"
+            android:textColor="@color/text_enabled_color"
+            android:textSize="12sp"
+            android:text="@string/real_name_authentication_msg"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_flower"
+            app:textFont="Normal" />
 
-            <com.hhsj.ilive.widget.CustomFontTextView
-                android:id="@+id/tv_real_name_msg"
-                android:layout_width="wrap_content"
-                android:layout_height="17dp"
-                android:textColor="@color/text_enabled_color"
-                android:textSize="12sp"
-                android:text="@string/real_name_authentication_msg"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_flower"
-                app:textFont="Normal" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    <!--  下半部分  -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/bottom_real_name_root"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintTop_toBottomOf="@id/top_info_root"
+        app:layout_constraintStart_toStartOf="@id/top_info_root"
+        app:layout_constraintEnd_toEndOf="@id/top_info_root">
 
-        <!--  下半部分  -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bottom_real_name_root"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@mipmap/icon_shield"/>
 
-            <ImageView
-                android:id="@+id/iv_logo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:src="@mipmap/icon_shield"/>
+        <ImageView
+            android:id="@+id/iv_real_name_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            app:layout_constraintStart_toStartOf="@id/iv_logo"
+            app:layout_constraintEnd_toEndOf="@id/iv_logo"
+            android:src="@mipmap/icon_protect_equity"/>
 
-            <ImageView
-                android:id="@+id/iv_real_name_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/iv_logo"
-                app:layout_constraintStart_toStartOf="@id/iv_logo"
-                app:layout_constraintEnd_toEndOf="@id/iv_logo"
-                android:src="@mipmap/icon_protect_equity"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_real_name_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="22dp"
+            android:gravity="center"
+            android:textSize="13sp"
+            app:textFont="Normal"
+            android:visibility="gone"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintTop_toBottomOf="@id/iv_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/black_40"
+            android:text="@string/real_name_authentication_tips"/>
 
-            <com.hhsj.ilive.widget.CustomFontTextView
-                android:id="@+id/tv_real_name_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp"
-                android:gravity="center"
-                android:textSize="13sp"
-                app:textFont="Normal"
-                android:visibility="gone"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintTop_toBottomOf="@id/iv_logo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black_40"
-                android:text="@string/real_name_authentication_tips"/>
+        <com.hhsj.ilive.widget.CustomEnableTextView
+            android:id="@+id/tv_start_authentication"
+            android:layout_width="222dp"
+            android:layout_height="35dp"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            app:textFont="Regular"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_real_name_tips"
+            android:text="@string/real_name_authentication_start"/>
 
-            <com.hhsj.ilive.widget.CustomEnableTextView
-                android:id="@+id/tv_start_authentication"
-                android:layout_width="222dp"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                app:textFont="Regular"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_real_name_tips"
-                android:text="@string/real_name_authentication_start"/>
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_real_name_bottom_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="9sp"
+            app:textFont="Light"
+            android:text="@string/real_name_authentication_tips2"
+            android:textColor="@color/register_login_edit_hint"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_start_authentication"/>
 
-            <com.hhsj.ilive.widget.CustomFontTextView
-                android:id="@+id/tv_real_name_bottom_tips"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="9sp"
-                app:textFont="Light"
-                android:text="@string/real_name_authentication_tips2"
-                android:textColor="@color/register_login_edit_hint"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_start_authentication"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
