--- a/ILIve/app/src/main/res/values/style.xml
+++ b/ILIve/app/src/main/res/values/style.xml
@@ -22,7 +22,20 @@
     <style name="TitleIcon">
         <item name="android:layout_width">44dp</item>
         <item name="android:layout_height">44dp</item>
-        <item name="android:padding">11dp</item>
+        <item name="android:paddingStart">11dp</item>
+        <item name="android:paddingEnd">11dp</item>
+        <item name="android:paddingTop">11dp</item>
+        <item name="android:paddingBottom">11dp</item>
+        <item name="android:layout_marginTop">45dp</item>
+    </style>
+
+    <style name="TitleIcon_back">
+        <item name="android:layout_width">44dp</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:paddingStart">18dp</item>
+        <item name="android:paddingEnd">18dp</item>
+        <item name="android:paddingTop">14dp</item>
+        <item name="android:paddingBottom">14dp</item>
         <item name="android:layout_marginTop">45dp</item>
     </style>
 </resources>
